syntax = "proto3";
package jio.brain.proto.knowledge.healthcare;

import "jio/brain/proto/knowledge/healthcare/base/symptom.proto";
import "jio/brain/proto/knowledge/healthcare/base/status.proto";

// TODO package google.protobuf Empty
message GetAllSymptomRequest {
    
}

// Returns a list of ID and Name Tuple
message GetAllSymptomResponse { 
    repeated jio.brain.proto.knowledge.healthcare.base.Symptom symptom = 1;
    jio.brain.proto.knowledge.healthcare.base.Status status = 2;
}